fixing broken style on modal window - edit study

--- a/dcm4chee-arc-ui2/src/styles.scss
+++ b/dcm4chee-arc-ui2/src/styles.scss
@@ -336,6 +336,12 @@ th {
     }
   }
 }
+.mdc-dialog{
+  .inputpart{
+    float: left;
+    width: 100%;
+  }
+}
 .nav-tabs {
   float: left;
   width: 100%;
